[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/DFKMS.res" type="DynamicFont" id=1]
[ext_resource path="res://Files/Fonts/Kenney/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Graphics.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect2" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Settings" type="ColorRect" parent="Control/ColorRect2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -275.0
margin_right = 450.0
margin_bottom = 275.0
color = Color( 0, 0, 0, 0.431373 )
script = ExtResource( 5 )

[node name="Sidebar" type="ColorRect" parent="Control/ColorRect2/Settings"]
anchor_bottom = 1.0
margin_right = 200.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Graphics" type="Button" parent="Control/ColorRect2/Settings/Sidebar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 40.0
margin_right = 70.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Graphics"

[node name="Info" type="Button" parent="Control/ColorRect2/Settings/Sidebar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -115.0
margin_right = 70.0
margin_bottom = -85.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Info"

[node name="Back" type="Button" parent="Control/ColorRect2/Settings/Sidebar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -70.0
margin_right = 70.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 3 )
text = "Menu"

[node name="Graphics" type="ColorRect" parent="Control/ColorRect2/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = 3.0
color = Color( 0, 0, 0, 0.431373 )
script = ExtResource( 6 )

[node name="FullScreen" type="CheckButton" parent="Control/ColorRect2/Settings/Graphics"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Full screen"

[node name="Info" type="ColorRect" parent="Control/ColorRect2/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = 3.0
color = Color( 0, 0, 0, 0.431373 )

[node name="Version" type="Label" parent="Control/ColorRect2/Settings/Info"]
margin_left = 5.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
text = "Version: None"

[node name="Server_Version" type="Label" parent="Control/ColorRect2/Settings/Info"]
visible = false
margin_left = 5.0
margin_top = 35.0
margin_right = 185.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 1 )
text = "Server Version: None"

[node name="Check" type="Button" parent="Control/ColorRect2/Settings/Info"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -179.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Check Update"

[node name="Update" type="Button" parent="Control/ColorRect2/Settings/Info"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_top = 54.0
margin_right = -10.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Update"

[node name="Menu" type="ColorRect" parent="Control/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -268.0
margin_right = 180.0
margin_bottom = 268.0
color = Color( 0, 0, 0, 0.431373 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/ColorRect2/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 25.0
margin_right = 96.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Delfi:World"

[node name="Create" type="Button" parent="Control/ColorRect2/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.5
margin_top = 125.0
margin_right = 108.5
margin_bottom = 159.0
rect_pivot_offset = Vector2( -778, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Create New Level"
icon_align = 1

[node name="Load" type="Button" parent="Control/ColorRect2/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 175.0
margin_right = 80.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( -778, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Load Level"
icon_align = 1

[node name="Settings" type="Button" parent="Control/ColorRect2/Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -105.0
margin_right = 80.0
margin_bottom = -71.0
rect_pivot_offset = Vector2( -778, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Settings"
icon_align = 1

[node name="Exit" type="Button" parent="Control/ColorRect2/Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
icon_align = 1

[node name="Label" type="Label" parent="Control/ColorRect2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -30.0
margin_right = 144.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Delfi:World"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Control/ColorRect2/Label"]
wait_time = 3.0

[connection signal="pressed" from="Control/ColorRect2/Settings/Sidebar/Graphics" to="Control/ColorRect2/Settings" method="_on_Graphics_pressed"]
[connection signal="pressed" from="Control/ColorRect2/Settings/Sidebar/Info" to="Control/ColorRect2/Settings" method="_on_Info_pressed"]
[connection signal="pressed" from="Control/ColorRect2/Settings/Sidebar/Back" to="Control/ColorRect2/Settings" method="_on_Back_pressed"]
[connection signal="pressed" from="Control/ColorRect2/Menu/Create" to="Control/ColorRect2/Settings" method="_on_Create_pressed"]
[connection signal="pressed" from="Control/ColorRect2/Menu/Settings" to="Control/ColorRect2/Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Control/ColorRect2/Menu/Exit" to="Control/ColorRect2/Menu" method="_on_Exit_pressed"]
[connection signal="timeout" from="Control/ColorRect2/Label/Timer" to="Control/ColorRect2/Label" method="_on_Timer_timeout"]
